# recosys

./: .gitignore  pyproject.toml  random.py
recosys/: calulator.py  dataloader.py  main.py
recosys/recommender/: __init__.py  base.py  random.py
