[tool.poetry]
name = "recosys"
version = "0.1.0"
description = ""
authors = ["musou1500 <musou1500@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.13"
numpy = "^1.23.3"
pandas = "^1.4.4"
sklearn = "^0.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
